# Kirby-Tec

./: .gitignore  Animator.cpp  Animator.h  CMakeLists.txt  Camera.cpp  Camera.h  Cascata.rtf  CollisionDetection.cpp  CollisionDetection.h  Definitions.h  Direction.h  Door.cpp  Door.h  Enemy.cpp  Enemy.h  GameLoop.cpp  GameLoop.h  GameObject.cpp  GameObject.h  GraphicsScene.cpp  GraphicsScene.h  Hud.h  Kirby.cpp  Kirby.h  LevelBuilder.cpp  LevelBuilder.h  MainWindow.cpp  MainWindow.h  NetworkElement.h  ObjectsHolder.h  Particle.cpp  Particle.h  PoppyBrosJr.cpp  PoppyBrosJr.h  Progettazione.rtf  README.md  RenderableObject.h  RigidBody.cpp  RigidBody.cpp.bak  RigidBody.h  (+25 more)
Relazione/: animazioni.html  base.html  collisioni.html  creazionelivelli.html  espandibilita.html  gameloop.html  gui.html  index.html  introduzione.html  manuale.html  oggettianimati.html  quirks.html  relazione.html  salvataggi.html  suoni.html  testing.html
Relazione/doxygen/html/: _animator_8cpp.html  _animator_8cpp__incl.map  _animator_8cpp__incl.md5  _animator_8h.html  _animator_8h.js  _animator_8h__dep__incl.map  _animator_8h__dep__incl.md5  _animator_8h__incl.map  _animator_8h__incl.md5  _animator_8h_source.html  _camera_8cpp.html  _camera_8cpp__incl.map  _camera_8cpp__incl.md5  _camera_8h.html  _camera_8h__dep__incl.map  _camera_8h__dep__incl.md5  _camera_8h__incl.map  _camera_8h__incl.md5  _camera_8h_source.html  _collision_detection_8cpp.html  _collision_detection_8cpp__incl.map  _collision_detection_8cpp__incl.md5  _collision_detection_8h.html  _collision_detection_8h.js  _collision_detection_8h__dep__incl.map  _collision_detection_8h__dep__incl.md5  _collision_detection_8h__incl.map  _collision_detection_8h__incl.md5  _collision_detection_8h_source.html  _definitions_8h.html  _definitions_8h.js  _definitions_8h__dep__incl.map  _definitions_8h__dep__incl.md5  _definitions_8h__incl.map  _definitions_8h__incl.md5  _definitions_8h_source.html  _direction_8h.html  _direction_8h.js  _direction_8h__dep__incl.map  _direction_8h__dep__incl.md5  (+1191 more)
Relazione/doxygen/html/search/: all_1.js  all_10.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_2.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  (+91 more)
levels/: elevator  intro  level1  level1.bak  level1.edited  level2  level2.bak  level3  level3.bak  level3.edited  lobby  lobby.bak
objects/: CMakeLists.txt  Camera.h  RenderableObject.h  TickableObject.h
sprites/: AboutUs.ase  Commands.aseprite
src/: main.cpp
